10. Fix decoding URLs when playing local files via in-built HTTP server.
11. Remove option to select cover image providers, always use all.
12. Remove Google and Spotify image search, not working.
13. Allow smaller images in itemviews.
14. Fix newlines showing as HTML tags in contextview.
15. Fix updating now-plying metadata for radio streams that transmit track
    numbers.

2.4.2
-----
1. Correctly handle changing 'Basic' mode music folder.
2. When stopping 'Basic' mode MPD instance, send SIGKILL.
3. Correctly set 'storeLyricsInMpdDir' config item, UI was setting wrong config
   item.
4. Set minimum Qt5 version to 5.11
5. Fix destructor of DeviceManagerPrivate to prevent Cantata from potentially
   crashing when closing.
6. Correctly set song details 'time', 'year', 'track' and 'disc' for streams
   from online services.
7. Don't use last.fm for artist image searches, its broken.
8. Hide BB10 styles (look bad), and gtk2 style (doesn't start) from list of
   styles in interface settings.
9. When checking if song exists, check disc number.
10. Fix getting song details from Cantata stream URLs.
11. Amend MPRIS interface: fix CanPlay/CanPause/CanSeek status update as well
    as LoopStatus getter and setter.
12. When checking if songs are different, compare track and disc numbers too.
13. Avoid unknown song durations and duplicate updates of MPRIS' song details.
14. Synchronize update of current song details and status of MPRIS interface,
    trigger MPRIS status update when connection to MPD has been lost.
15. Add chartlyrics.com to list of lyrics providers.
16. Set default lyrics providers to azlyrics.com, chartlyrics.com, and
    lyrics.wikia.com
17. Fix enabling of play queue navigation actions 'next' and 'previous'.
18. Fix bus name of freedesktop.org's power management.
19. Additionally call Inhibit() from org.freedesktop.login1.Manager.
20. Query Qt whether system tray is available if current desktop environment is